ahora si funciona

--- a/homebanking/Login/templates/login.html
+++ b/homebanking/Login/templates/login.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
 </head> 
-    <h3>Usuario: </h3>
-    <h3>Contraseña: </h3>
-    <a href="cliente/">clientes</a>
+    <body>
+        <h3>Usuario: </h3>
+        <h3>Contraseña: </h3>
+        <a href="cliente/">clientes</a>
+    </body>
 </html>
