--- a/homebanking/Prestamos/templates/prestamos.html
+++ b/homebanking/Prestamos/templates/prestamos.html
@@ -5,5 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prestamos</title>
 </head>
+
+<body>
     <h3>Bienvenido a la página de Prestamos</h3>
+</body>
+
 </html>
