--- a/homebanking/Prestamos/templates/prestamos.html
+++ b/homebanking/Prestamos/templates/prestamos.html
@@ -7,6 +7,16 @@
 </head>
 
 <body>
+    <nav>
+        <ul>
+            <li><a href="/cliente/1">Informacion del cliente</a></li>
+            <li><a href="/movimientos">Movimientos</a></li>
+            <li><a href="/prestamos">Prestamos</a></li>
+            <li><a href="/tarjetas/1">Tarjetas</a></li>
+            <li><a href="/cuentas">Cuentas</a></li>
+            <li><a href="{% url 'logout' %}">Cerrar Sesión</a></li>
+        </ul>
+    </nav>
     <h3>Bienvenido a la página de Prestamos</h3>
 </body>
 
