--- a/homebanking/Cuentas/templates/cuentas.html
+++ b/homebanking/Cuentas/templates/cuentas.html
@@ -6,6 +6,15 @@
     <title>Cuentas</title>
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li><a href="/cliente/1">Informacion del cliente</a></li>
+            <li><a href="/movimientos">Movimientos</a></li>
+            <li><a href="/prestamos">Prestamos</a></li>
+            <li><a href="/tarjetas/1">Tarjetas</a></li>
+            <li><a href="/cuentas">Cuentas</a></li>
+            <li><a href="{% url 'logout' %}">Cerrar Sesión</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
