--- a/homebanking/Clientes/templates/cliente.html
+++ b/homebanking/Clientes/templates/cliente.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cliente</title>
 </head>
+<body>
     <a href="/">Cerrar sesion</a>
     <a href="/movimientos">Movimientos</a>
     <a href="/prestamos">Prestamos</a>
     <a href="/tarjetas">Tarjetas</a>
     <a href="/cuentas">Cuentas</a>
+</body>
 </html>
