--- a/homebanking/Login/templates/home.html
+++ b/homebanking/Login/templates/home.html
@@ -1,19 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Inicio</title>
 </head>
+
 <body>
+    <main class="container">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="{% url 'home' %}">Inicio</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="{% url 'Cliente' %}">Cliente</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link" href="{% url 'Cuentas' %}">Cuentas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'tarjetas' %}">Tarjeta</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link" href="{% url 'Prestamos' %}">Prestamos</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link" href="{% url 'Movimientos' %}">Movimientos</a>
+                        </li>
+                        
+                    </ul>
+                </div>
+        <ul class="justify-content-end ">
+        {% if user.is_authenticated %}
+        <p class="text-center"><b> Hola {{user.username }}</b></p>
+            <a class="btn btn-primary" role="button" href="{% url 'logout' %}">Cerrar Sesión</a>
+            {% else %}
+            <a class="btn btn-primary " role="button"  href="{% url 'login' %}">Iniciar Sesión</a>
+            <a class="btn btn-primary" role="button" href="{% url 'register'%}">Registrar</a>
+            {% endif %}
+        </ul>
+    </div>
+    </nav>
     {% if user.is_authenticated %}
-    <h2>Bienvenido a Maze bank</h2>
-    <p>Hola {{user.username}}</p>
-    <p><a href="{% url 'logout' %}">Cerrar Sesión</a></p>
-    {% else %}
-    <p><a href="{% url 'login' %}">Iniciar Sesión</a></p>
-    <p><a href="{% url 'register'%}">Registrar</a></p>
-    {% endif %}
+    <h1 class="text-center">Bienvenido a HomeBanking</h1>
+    
+        {% else %}
+        {% endif %}
+
+
+        {% block content%}
+    
+        {%endblock%}
+    </main>
 </body>
 
 </html>
