--- a/homebanking/Login/templates/login.html
+++ b/homebanking/Login/templates/login.html
@@ -1,18 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>Login HomeBanking</title>
-</head>
-<body>
-    <h2>Login user</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{form.as_p}}
-        <button type="submit" >Iniciar Sesion</button>
-    </form>
-</body>
-
-</html>
+{% extends 'home.html'%}
+{% block content%}
+<h2>Login Usuario</h2>
+<form method="post" class="form">
+    {% csrf_token %}
+    <div class="card mx-auto" style="width: 30rem;">
+        <div class="card-body">
+            <h4 class="card-title">Ingrese sus datos</h4>
+            <div class="mb-3">
+                <label for="usu" class="form-label">Usuario:</label>
+                <input type="text" class="form-control" name="username" id="usu" placeholder="Nombre de Usuario">
+            </div>
+            <div class="mb-3"><label for="contra" class="form-label">Contraseña:</label>
+                <input type="password" class="form-control" name="password" id="contra" placeholder="Contrase">
+            </div>
+            <div class="d-grid gap-2 col-6 mx-auto">
+            <button class="btn btn-primary" type="submit">Iniciar Sesion</button>
+        </div>
+        </div>
+    </div>
+    {%endblock%}
