--- a/homebanking/Login/templates/home.html
+++ b/homebanking/Login/templates/home.html
@@ -21,19 +21,19 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="{% url 'Cliente' %}">Cliente</a>
+                            <a class="nav-link" aria-current="page" href="/cliente/1">Cliente</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link" href="{% url 'Cuentas' %}">Cuentas</a>
+                            <a class="nav-link" href="/Cuentas">Cuentas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'tarjetas' %}">Tarjeta</a>
+                            <a class="nav-link" href="/tarjetas/1">Tarjeta</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link" href="{% url 'Prestamos' %}">Prestamos</a>
+                            <a class="nav-link" href="/Prestamos">Prestamos</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link" href="{% url 'Movimientos' %}">Movimientos</a>
+                            <a class="nav-link" href="/Movimientos">Movimientos</a>
                         </li>
                         
                     </ul>
