cambio verificacion de registro

--- a/homebanking/Login/templates/home.html
+++ b/homebanking/Login/templates/home.html
@@ -24,16 +24,16 @@
                             <a class="nav-link" aria-current="page" href="/cliente/1">Cliente</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link" href="/Cuentas">Cuentas</a>
+                            <a class="nav-link" href="/cuentas">Cuentas</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/tarjetas/1">Tarjeta</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link" href="/Prestamos">Prestamos</a>
+                            <a class="nav-link" href="/prestamos">Prestamos</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link" href="/Movimientos">Movimientos</a>
+                            <a class="nav-link" href="/movimientos">Movimientos</a>
                         </li>
                         
                     </ul>
