--- a/homebanking/Prestamos/templates/prestamos.html
+++ b/homebanking/Prestamos/templates/prestamos.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prestamos</title>
-</head>
-
-<body>
+{% extends 'home.html'%}
+{% block title%}Prestamos{% endblock %}
+{% block h1%}Prestamos{% endblock %}
+{% block content%}
     <nav>
         <ul>
             <li><a href="/cliente/1">Informacion del cliente</a></li>
@@ -17,7 +12,4 @@
             <li><a href="{% url 'logout' %}">Cerrar Sesión</a></li>
         </ul>
     </nav>
-    <h3>Bienvenido a la página de Prestamos</h3>
-</body>
-
-</html>
+{%endblock%}
