--- a/homebanking/Tarjetas/templates/tarjetas.html
+++ b/homebanking/Tarjetas/templates/tarjetas.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tarjetas</title>
-</head>
-<body>
+{% extends 'home.html'%}
+{% block title%}Tarjetas{% endblock %}
+{% block h1%}Tarjetas{% endblock %}
+{% block content%}
     <nav>
         <ul>
             <li><a href="/cliente/1">Informacion del cliente</a></li>
@@ -34,6 +30,5 @@
             {% endif %}
         {% endfor %}
     </ul>
-</body>
-</html>
+    {%endblock%}
 
