--- a/homebanking/Login/templates/home.html
+++ b/homebanking/Login/templates/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>Inicio</title>
+    <title>{% block title%}Inicio{% endblock %}</title>
 </head>
 
 <body>
@@ -41,21 +41,17 @@
         <ul class="justify-content-end ">
         {% if user.is_authenticated %}
         <p class="text-center"><b> Hola {{user.username }}</b></p>
-            <a class="btn btn-primary" role="button" href="{% url 'logout' %}">Cerrar Sesión</a>
+            <a class="btn btn-danger" role="button" href="{% url 'logout' %}">Cerrar Sesión</a>
             {% else %}
             <a class="btn btn-primary " role="button"  href="{% url 'login' %}">Iniciar Sesión</a>
-            <a class="btn btn-primary" role="button" href="{% url 'register'%}">Registrar</a>
+            <a class="btn btn-secondary" role="button" href="{% url 'register'%}">Registrar</a>
             {% endif %}
         </ul>
     </div>
     </nav>
     {% if user.is_authenticated %}
-
-    <h1 class="text-center">Bienvenido a HomeBanking</h1>
-    
-        {% else %}
-        {% endif %}
-
+    <h1 class="text-center">Bienvenido a {% block h1%}HomeBanking{% endblock %}</h1>
+    {% endif %}
 
         {% block content%}
     
