--- a/homebanking/Login/templates/login.html
+++ b/homebanking/Login/templates/login.html
@@ -1,4 +1,8 @@
 {% extends 'home.html'%}
+
+
+{% block title%}Login{% endblock %}
+
 {% block content%}
 <h2>Login Usuario</h2>
 <form method="post" class="form">
