--- a/homebanking/Login/templates/register.html
+++ b/homebanking/Login/templates/register.html
@@ -26,6 +26,11 @@
                 <input type="text" required class="form-control" name="last_name" id="ls" placeholder="Apellido">
             </div>
 
+            <div class="mb-3">
+                <label for="dni" class="form-label">DNI:</label>
+                <input type="text" required class="form-control" name="customer_DNI" id="dni" placeholder="DNI">
+            </div>
+
             <div class="mb-3"><label for="contra" class="form-label">Contraseña:</label>
                 <input type="password" required class="form-control" name="password1" id="contra"
                     placeholder="Contraseña">
@@ -41,11 +46,11 @@
 
             </span>
             <div class="mb-3"><label for="contra2" class="form-label">Contraseña (confirmación):</label>
-                <input type="password" required class="form-control" name="password1" id="contra2"
+                <input type="password" required class="form-control" name="password2" id="contra2"
                     placeholder="Contraseña (confirmación)">
             </div>
             <div class="d-grid gap-2 col-6 mx-auto">
-                <button class="btn btn-primary" type="submit">Registrar</button>
+                <button class="btn btn-primary" type="submit" value="register" >Registrar</button>
             </div>
         </div>
     </div>
